# hotto-designers-generator

./: .gitignore  RESUME.md  packages.txt  pyproject.toml  requirements.txt
scripts/: check_shared_sync.sh  test_vision_pipeline.py
src/api/: main.py
src/enhancer/: upscaler.py
src/extractor/: image_extractor.py  mysoku_crop.py  parser.py  pdf_images.py  pdf_text.py  vision_classify.py
src/message/: area_description.py  generator.py  generator_ai.py
src/renderer/: render.py
templates/: poster_architect.html  poster_gallery.html  poster_monochrome.html  poster_mood.html
