[project]
name = "hotto-designers-generator"
version = "0.1.0"
description = "HOTTO designers - poster & message generator for designer rental properties"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "jinja2>=3.1.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "pydantic>=2.0",
]
